# claude-mesh

./: .gitignore  CHANGELOG.md  HANDOFF.md  LAUNCH_CHECKLIST.md  README.md  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
commands/: mesh-check-inbox.md  mesh-init.md  mesh-publish.md
docs/: agent-teams-mode.md  case-study.md  how-it-works.md  security-posture.md  standalone-mode.md  why-ftai.md
docs/adr/: ADR-001-ftai-over-json.md  ADR-002-layer-over-agent-teams.md  ADR-003-dual-mode-detection.md
docs/plans/: 2026-04-17-claude-mesh-v1.md
docs/specs/: SPEC-001-claude-mesh-v1.md
hooks/: _common.sh  post_tool_use_edit.sh  post_tool_use_team.sh  session_start.sh  subagent_stop.sh  task_completed.sh  task_created.sh  teammate_idle.sh  user_prompt_submit.sh
scripts/: e2e_simulated.sh
src/claude_mesh/: __init__.py  __main__.py  cli.py  config.py  drain.py  events.py  ftai.py  mode.py  pathval.py  sanitize.py  storage.py
src/claude_mesh/commands/: __init__.py  doctor.py  drain.py  init.py  mark_read.py  notify_change.py  send.py  status.py  subagent_turn.py  (+1 more)
tests/: conftest.py
tests/integration/: test_hooks_single_session.py
tests/red/: test_format_integrity.py  test_input_injection.py  test_llm_injection.py  test_path_security.py  test_sensitive_data.py
tests/unit/: test_cli.py  test_config.py  test_doctor.py  test_drain.py  test_events.py  test_ftai.py  test_init.py  test_mode.py  test_notify_change.py  test_pathval.py  test_sanitize.py  test_send.py  test_status.py  test_storage.py
(+13 files in other folders)
