[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-mesh"
version = "0.1.0"
description = "FTAI-structured shared knowledge layer for Claude Code multi-session coordination"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "FolkTech AI LLC" }]
keywords = ["claude", "claude-code", "agent-teams", "ftai", "multi-agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
claude-mesh = "claude_mesh.cli:main"

[project.urls]
Homepage = "https://github.com/FolkTechAI/claude-mesh"
Issues = "https://github.com/FolkTechAI/claude-mesh/issues"
Source = "https://github.com/FolkTechAI/claude-mesh"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "S", "RET"]
ignore = ["S101"]  # allow asserts in tests

[tool.mypy]
strict = true
python_version = "3.11"
exclude = ["tests/"]
